PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- PEL now support both *rust-mode* and Tree-Sitter based *rust-ts-mode*.
  - It automatically associates the tree-sitter based *rust-ts-mode* with Rust
    files when *pel-use-rust* customizable user-option is set to the new value
    =with-tree-sitter=. If it is set to =t= it select the classic *rust-mode*.
- PEL activates Javascript support extension when the *pel-use-js* is turned
  on (set to =t=).
- PEL now support both *go-mode* and Tree-Sitter based *go-ts-mode*.
  - It automatically associates the tree-sitter based *go-ts-mode* with GO
    files when *pel-use-go* customizable user-option is set to the new value
    =with-tree-sitter=. If it is set to =t= it select the classic *go-mode*.
  - Also simplified the customization: the *pel-use-go-mode* user option is no
    longer used: setting *pel-use-go* is enough to request its installation.
    It is installed even if Go support done by Tree Sitter is requested.
- Improve PEL lazy loading macros:
  - *pel-eval-after-load* macro now accepts a list of features or just one.
    It is mostly useful
    when a tree-sitter based major mode is implemented inside a file that does
    not load the file that implements the classic major mode as it is the case
    for go-ts-mode and go-mode (even though the go-ts-mode identifies deriving
    from go-mode but only by modifying the property data, not by explicitly
    deriving from go-mode and loading that feature.)
  - *pel-config-major-mode* macro now requires a new parameter specifying how
    tree-sitter is handled.  For some major-modes, the tree-sitter mode
    derives from the classic major mode and an association must be created
    inside the *major-mode-remap-alist* between the two.  In that case, the
    parameter must be set to =:same-for-ts=.  If the tree-sitter based major